--- a/apps/notifier/package.json
+++ b/apps/notifier/package.json
@@ -1,21 +1,24 @@
 {
-	"name": "@rinza/notifier",
-	"version": "0.0.0",
-	"main": "dist/index.js",
-	"scripts": {
-		"fmt": "npx biome format src --write",
-		"build": "tsup src/index.ts --format cjs --out-dir dist",
-        "serve": "pm2 start pm2.config.js"
-	},
-	"dependencies": {
-		"@farcaster/hub-nodejs": "^0.10.9",
-		"express": "^4.18.2",
-		"zod": "^3.22.2"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.2.2",
-		"@types/express": "^4.17.20",
-		"tsup": "^7.2.0",
-		"typescript": "^5.2.2"
-	}
+  "name": "@rinza/notifier",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "scripts": {
+    "fmt": "npx biome format src --write",
+    "build": "tsup src/index.ts --format cjs --out-dir dist",
+    "build:watch": "npm run build -- --watch",
+    "serve": "pm2 start pm2.config.js",
+    "dev": "concurrently \"npm run build:watch\" \"npm run serve\""
+  },
+  "dependencies": {
+    "@farcaster/hub-nodejs": "^0.10.9",
+    "express": "^4.18.2",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.2.2",
+    "@types/express": "^4.17.20",
+    "concurrently": "^8.2.2",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2"
+  }
 }
