--- a/apps/notifier/package.json
+++ b/apps/notifier/package.json
@@ -7,15 +7,17 @@
     "build": "tsup src/index.ts --format cjs --out-dir dist",
     "build:watch": "npm run build -- --watch",
     "serve": "pm2 start pm2.config.js",
-    "dev": "concurrently \"npm run build:watch\" \"npm run serve\""
+    "dev": "concurrently \"npm run build:watch\" \"npm run serve\" && \"pm2 logs\""
   },
   "dependencies": {
     "@farcaster/hub-nodejs": "^0.10.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.2.2",
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "concurrently": "^8.2.2",
     "tsup": "^7.2.0",
