--- a/apps/hose/package.json
+++ b/apps/hose/package.json
@@ -3,14 +3,21 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/node": "^20.8.9",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^4.5.0"
   }
 }
