--- a/apps/hose/tsconfig.json
+++ b/apps/hose/tsconfig.json
@@ -17,6 +17,12 @@
     "allowJs": true,
     "types": [
       "bun-types" // add Bun global
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
