--- a/apps/notifier/package.json
+++ b/apps/notifier/package.json
@@ -13,6 +13,7 @@
     "@farcaster/hub-nodejs": "^0.10.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "socket.io": "^4.7.2",
     "sqlite3": "^5.1.6",
     "zod": "^3.22.2"
   },
