--- a/packages/farcaster-hooks/package.json
+++ b/packages/farcaster-hooks/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.2",
     "vite": "^4.4.11",
     "zod": "^3.22.4"
   }
