--- a/apps/notifier/package.json
+++ b/apps/notifier/package.json
@@ -6,19 +6,20 @@
     "fmt": "npx biome format src --write",
     "build": "tsup src/index.ts --format cjs --out-dir dist",
     "build:watch": "npm run build -- --watch",
-    "serve": "pm2 start pm2.config.js",
+    "serve": "pm2-runtime start pm2.config.js",
     "dev": "concurrently \"npm run build:watch\" \"npm run serve\""
   },
   "dependencies": {
     "@farcaster/hub-nodejs": "^0.10.9",
+    "better-sqlite3": "^9.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.6",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.2.2",
+    "@types/better-sqlite3": "^7.6.6",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "concurrently": "^8.2.2",
