--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "farcaster-hooks:build": "cd packages/farcaster-hooks && npm run build",
     "farcaster-hooks:serve": "cd packages/farcaster-hooks && npm run serve",
     "farcaster-hooks:dev": "cd packages/farcaster-hooks && npm run dev",
-    "phrasetown:dev": "concurrently \"bun run notifier:dev\" \"cd apps/hose && bunx vite\""
+    "hose:dev": "concurrently \"bun run notifier:dev\" \"cd apps/hose && bunx vite\""
   },
   "workspaces": ["packages/*"],
   "dependencies": {
