--- a/Dockerfile.notifier
+++ b/Dockerfile.notifier
@@ -1,5 +1,5 @@
 # Use Node.js official image
-FROM node:20
+FROM node:18
 
 # Set working directory
 WORKDIR /usr/src/app
@@ -7,12 +7,16 @@ WORKDIR /usr/src/app
 # Copy everything from current directory to working directory
 COPY . .
 
+# Navigate to the notifier app within the monorepo
+WORKDIR /usr/src/app/apps/notifier
+
 # Install PM2 globally
 RUN npm install pm2 -g
 
 # Install any needed packages specified in package.json
 RUN npm install
 
+# Build notifier
 RUN npm run build
 
 # Start the applications with PM2
