--- a/apps/hose/package.json
+++ b/apps/hose/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
