fix: package entrypoint error

--- a/packages/farcaster-hooks/package.json
+++ b/packages/farcaster-hooks/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rinza/farcaster-hooks",
-  "version": "0.0.1",
-  "module": "./index.tsx",
+  "version": "0.0.2",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "serve": "bunx vite",
