update: make hook tsconfig strict (fixes zod problem)

--- a/packages/farcaster-hooks/package.json
+++ b/packages/farcaster-hooks/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@rinza/farcaster-hooks",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "serve": "bunx vite",
     "fmt": "bunx biome format --write src",
-    "build": "bunx tsc -p tsconfig.build.json",
+    "build": "bunx tsc -p tsconfig.json",
     "build:watch": "bun run build --watch",
     "dev": "concurrently \"npm run build:watch\" \"npm run serve\""
   },
