--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "workspaces": ["packages/*"],
   "dependencies": {
     "base-64": "^1.0.0",
+    "buffer": "^6.0.3",
     "utf8": "^3.0.0"
   }
 }
